Fix bottom half of 'Class' text being cut off

--- a/resources/styles/components/scores/index.less
+++ b/resources/styles/components/scores/index.less
@@ -112,7 +112,6 @@
     > div {
       display: block;
       width: 100%;
-      height: 50%;
       padding: 8px;
     }
 
